funcionando vinculación etapas de maquina
Setup, start, ready, again, valid, showansw, block,

El archivo main.js está disponible para programar cualquier mecánica
convencional.

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -127,3 +127,12 @@ input, textarea  {
 #superWrapper{
     opacity: 0;
 }
+#blocklayer{
+    display: none;
+    background-color: #FFFFFF;
+    left: 0px;
+    top: 0px;
+    opacity: 0.2;
+    width: 900px;
+    height: 593px;
+}
