--- a/www/css/app.css
+++ b/www/css/app.css
@@ -57,16 +57,7 @@ input, textarea  {
     top: 5px;
     text-align: left;
 }
-#footer{
-   background-image: url(../img/foot.png);
-    height: 78px;
-    width: 1280px;
-    top: 645px;
-    overflow: hidden;
-    background-size: initial;
-    background-repeat: no-repeat;
-    background-position: bottom;
-}
+
 
 #titulo{
     text-align: left;
@@ -154,7 +145,7 @@ input, textarea  {
 }
 #hbm{
     background-image: url(../img/head_mid.png);
-    width: 87%;
+    width: 83.8%;
     background-repeat-x: repeat;
 }
 #hbr{
@@ -162,9 +153,54 @@ input, textarea  {
 }
 .headpart{
     height: 100%;
-    width: 80px;
+    width: 90px;
     background-size: initial;
     background-position: top;
+    background-repeat: no-repeat;
+    display: inline-block;
+    position: relative;
+    margin: -2px;
+    padding: 0px;
+    border: none;
+}
+
+/*   FOOTER   */
+#footer{
+ /*  background-image: url(../img/foot.png);*/
+    height: 78px;
+    width: 1280px;
+    top: 645px;
+    overflow: hidden;
+    background-size: initial;
+    background-repeat: no-repeat;
+    background-position: bottom;
+}
+
+#bgfoot{
+    width: 1280px;
+    height: 70px;
+    bottom: -5px;
+}
+
+#fbl{      
+    background-image: url(../img/foot_left.png);
+}
+
+#fbm{
+    background-image: url(../img/foot_mid.png);
+    width: 86%;
+    background-repeat-x: repeat;
+}
+
+#fbr{
+    background-image: url(../img/foot_right.png);
+}
+
+.footpart{
+    height: 100%;
+    width: 90px;
+    background-size: initial;
+    background-position: bottom;
     background-repeat: no-repeat;
     display: inline-block;
     position: relative;
