--- a/www/e1/css/scene.css
+++ b/www/e1/css/scene.css
@@ -1,26 +1,28 @@
 #fondoEscena{
     background-image: url(../img/fondo.png);
-    width: 1280px;
-    height: 720px;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
     /*left: 14px;*/
-    display: block;
+    display: fixed;
 }
 #escena1{
-    width: 900px;
-    height: 600px;
+    width: 100%;
+    height: 100%;
     display: block;
     margin: 0px;
     padding: 0px;
     left: 200px;
     top: 75px;
+    background-color: gray;
 }
 
 .boton{
-    width: 277px;
+   /* width: 277px;
     height: 171px;
     background: none;
     background-image: url(../img/cuadro.png);
-    border: none;
+    border: none;*/
 }
 
 .boton:focus, .boton:active, .boton:visited, .boton:hover{
