--- a/www/css/hover.css
+++ b/www/css/hover.css
@@ -273,7 +273,7 @@
   transition-property: transform;
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  /*box-shadow: 0 0 1px rgba(0, 0, 0, 0);*/
 }
 .grow-rotate:hover, .grow-rotate:focus, .grow-rotate:active, .grow-rotate_{
   -webkit-transform: scale(1.1) rotate(4deg);
