--- a/www/css/app.css
+++ b/www/css/app.css
@@ -10,7 +10,7 @@
     background-size: 100% 100%;
     background-clip:border-box;
     font-family: 'Signika', sans-serif;
-    font-size: 16px;
+    font-size: inherit;
     font-weight: 600; 
 }
 span {
@@ -38,6 +38,7 @@ body {
     margin: 0px;
     padding: 0px;
     background-position: center center;
+    font-size: 16px;
 }
 div{
     float:left;
@@ -87,8 +88,9 @@ input, textarea  {
 }
 
 .popsplash{
-    width: 370px;
-    height: 225px;
+    width: 24em;
+    height: 15em;
+    z-index: 100;
     display: block;
     left: 0;
     right: 0;
@@ -147,8 +149,9 @@ input, textarea  {
     left: 0px;
     top: 0px;
     opacity: 0.3;
-    width: 1280px;
-    height: 683px;
+    width: 100%;
+    height: 100%;
+    position: fixed; 
 }
 .animsBtnUI{
     -webkit-transition-duration: 0.3s;
@@ -180,9 +183,9 @@ input, textarea  {
     background-image: url(../img/head_right.png);
 }
 .headpart{
-    height: 100%;
+    height: 5em;
     width: 90px;
-    background-size: initial;
+    background-size: inherit;
     background-position: top;
     background-repeat: no-repeat;
     display: inline-block;
@@ -314,6 +317,6 @@ input, textarea  {
     border: 0.2em #EEE solid;
     border-radius: 1em;
     margin: 1em;
-    box-shadow: 5px 4px 7px #000000 !important;
-
+    box-shadow: 5px 4px 7px #000000;
+    font-size: inherit;
 }
