--- a/www/e1/css/scene.css
+++ b/www/e1/css/scene.css
@@ -46,6 +46,18 @@
     cursor: pointer;
 }
 
+.botonVerde{
+    width: 13em;
+    height: 6em;
+    background: none;
+    background-color: #D2E134;
+    border: 0.2em #EEE solid;
+    border-radius: 1em;
+    margin: 1em;
+    box-shadow: 5px 4px 7px #000000;
+    font-size: inherit;
+}
+
 #opcion1{
     left: 32px;
     top: 210px;
@@ -73,7 +85,7 @@
     font-weight: bold;
   /*  width: 11.89em;*/
     height: 3.05em;
-    padding-top: 1.7em;
+    padding-top: 1.5em;
     float: none;
     margin: auto;
     
@@ -199,95 +211,4 @@
 	-moz-box-pack: justify;
 	box-pack: justify;
 }
-#menubar{
-    display: block;
-    position: fixed;
-    float:none;
-    
-    height: 4em;
-    
-    -webkit-box-flex: 3;
-    -moz-box-flex: 3;
-    box-flex: 3;
-    
-    display: -webkit-box;
-	display: -moz-box;
-	display: box;
-    
-	-webkit-box-orient: vertical;
-	-moz-box-orient: vertical;
-	box-orient: vertical;
-
-	-webkit-box-align: center;
-	-moz-box-align: center;
-	box-align: center;
-
-	-webkit-box-direction: normal;
-	-moz-box-direction: normal;
-	box-direction: normal;
-
-	-webkit-box-pack: justify;
-	-moz-box-pack: justify;
-	box-pack: justify;
-    
-    top: 7em;
-    right: 0px;
-}
-#menubar >*{
-    position: absolute;
-}
-
-    
-@media only screen and (orientation : landscape) {
-    .boxvh {
-        -webkit-box-orient: horizontal;
-        -moz-box-orient: horizontal;
-        box-orient: horizontal;
-    }
-    .botan {
-        display: block;
-    }
-    #footer {
-        display: none !important;
-    }
-}
-
-@media only screen and (max-height : 290px) {
-/* Styles */
-    #escena1 {
-        margin-top: 0em;
-    }
-    #header {
-        display: none;
-    }
-    body{
-        font-size: 7px !important;
-    }
-    
-}
-
-
-
-@media only screen and (max-height : 590px) {
-/* Styles */
-    #footer {
-        display: none !important;
-    }
-}
-#wraperinstruccion {
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    opacity: .4;
-}
-@media only screen and (min-height : 700px) {
-/* Styles */
-    #escena1 {
-        margin-top: 6.3em;
-    }
-}
-
 
